--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,14 +1,4 @@
-
-
-
-
 ########### install files ###############
-
-
-
-
-
-#original Makefile.am contents follow:
-
-#KDE_LANG = en
 #KDE_DOCS = umbrello
+kde4_create_handbook(index.docbook)
+kde4_install_handbook()
