A precondition widget will now be drawn only by clicking on the line of an object widget. When the object widget is moved, the precondition widget move too. It can be saved and loaded with an XMI file.
svn path=/branches/work/isi-umbrello/umbrello/; revision=628078

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -325,6 +325,7 @@ set(libumbrello_SRCS
    toolbarstatemessages.cpp 
    toolbarstateother.cpp 
    toolbarstatepool.cpp 
+   toolbarstatesequence.cpp 
    uml.cpp 
    umlattributelist.cpp 
    umlentityattributelist.cpp 
