SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=628516

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -28,7 +28,7 @@ GenericName[ga]=Múnlóir UML
 GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
-GenericName[ja]=UML モデラ
+GenericName[ja]=UML モデラー
 GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
