Add a widget to notify the death of an object in sequence diagram. It can be loaded and saved. The end of the object line depends on the site of the EndOfLife Widget.
svn path=/branches/work/isi-umbrello/umbrello/; revision=630571

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -271,6 +271,7 @@ set(libumbrello_SRCS
    datatypewidget.cpp 
    dialog_utils.cpp 
    docwindow.cpp 
+   endoflifewidget.cpp   
    entity.cpp 
    entityattribute.cpp 
    entitywidget.cpp 
