Add tree new buttons in the tool bar of the activity diagram: send signal, accept signal and accept time event.
svn path=/branches/work/isi-umbrello/umbrello/; revision=631432

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -313,6 +313,7 @@ set(libumbrello_SRCS
    preconditionwidget.cpp
    seqlinewidget.cpp 
    statewidget.cpp 
+   signalwidget.cpp
    stereotype.cpp 
    template.cpp 
    textblock.cpp 
@@ -471,6 +472,7 @@ kde4_install_icons( ${ICON_INSTALL_DIR}   )
 #pythonimport.cpp \
 #seqlinewidget.cpp \
 #statewidget.cpp \
+#signalwidget.cpp \
 #stereotype.cpp \
 #template.cpp \
 #textblock.cpp \
