addition of a movable dash line for parallel and alternative combined fragments
svn path=/branches/work/isi-umbrello/umbrello/; revision=632515

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -278,6 +278,7 @@ set(libumbrello_SRCS
    enum.cpp 
    enumliteral.cpp 
    enumwidget.cpp 
+   floatingdashlinewidget.cpp
    floatingtextwidget.cpp 
    floatingtextwidgetcontroller.cpp
    folder.cpp
