Undo / Redo commit:
-Undo Rename
-Undo textChange
-Undo visibility
-Undo  stereotype (just a try )
- somes comments on last undo files.

/!\ There is a bug with undo redo: don't redo/undo/redo the TextRename on FloatingTextWidget else Kcrash says hello ;)

svn path=/branches/work/isi-umbrello/umbrello/; revision=633041

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -229,6 +229,11 @@ set(libcmds_SRCS
 	
 	cmds/cmd_moveWidget.cpp
 	cmds/cmd_resizeWidget.cpp
+	cmds/cmd_set_visibility.cpp
+	cmds/cmd_set_stereotype.cpp
+	cmds/widget/cmd_set_name.cpp
+	cmds/widget/cmd_set_txt.cpp
+	cmds/cmd_handle_rename.cpp
 
 )
 kde4_automoc(${libclipboard_SRCS})
