SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=633510

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -29,6 +29,7 @@ GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラー
+GenericName[kk]=UML үлгілегіші
 GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
