Add of the Object flow widget in the activity diagram (UML2.0) (Not finished yet)
svn path=/branches/work/isi-umbrello/umbrello/; revision=633723

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -325,6 +325,7 @@ set(libumbrello_SRCS
    seqlinewidget.cpp 
    statewidget.cpp 
    signalwidget.cpp
+   objectflowwidget.cpp
    stereotype.cpp 
    template.cpp 
    textblock.cpp 
