Add a state (UML 2.0) in the activity diagram: final state.
svn path=/branches/work/isi-umbrello/umbrello/; revision=635271

--- a/umbrello/pics/CMakeLists.txt
+++ b/umbrello/pics/CMakeLists.txt
@@ -7,7 +7,7 @@ CVimplementation_signal.png  CVimplementation_slot.png  CVimplementation_var.png
 CVprivate_meth.png  CVprivate_signal.png  CVprivate_slot.png  CVprivate_var.png  CVprotected_meth.png  
 CVprotected_signal.png  CVprotected_slot.png  CVprotected_var.png  CVpublic_meth.png  CVpublic_signal.png  
 CVpublic_slot.png  CVpublic_var.png  CVstruct.png  deep-history.png  shallow-history.png  dependency.png  
-end_state.png  generalisation.png  initial_state.png  interface.png  join.png  junction.png  datatype.png  enum.png  
+final_activity.png  end_state.png  generalisation.png  initial_state.png  interface.png  join.png  junction.png  datatype.png  enum.png  
 message-synchronous.png  message-asynchronous.png  note.png  object_flow.png  object.png  startlogo.png  template.png  text.png  
 class.png  uniassociation.png  usecase.png  branch.png  fork.png  state-fork.png  package.png  artifact.png  
 box.png  node.png  entity.png  relationship.png  subsystem.png cursor-actor.png  message-found.png  accept_signal.png  accept_time_event.png  send_signal.png    cursor-andline.png  
@@ -16,7 +16,7 @@ cursor-shallow-history.png  cursor-state-fork.png  cursor-usecase.png  cursor-in
 cursor-aggregation.png  cursor-component.png  cursor-containment.png  cursor-interface.png  cursor-datatype.png  
 cursor-enum.png  cursor-text.png  cursor-anchor.png  cursor-object_flow.png  cursor-composition.png  cursor-message-asynchronous.png  
 cursor-class.png  cursor-artifact.png  cursor-dependency.png  cursor-message-synchronous.png  
-cursor-uniassociation.png  cursor-association.png  cursor-end_state.png  cursor-node.png  cursor-box.png  
+cursor-uniassociation.png  cursor-association.png  cursor-end_state.png  cursor-final_activity.png  cursor-node.png  cursor-box.png  
 cursor-fork.png  cursor-note.png  cursor-branch.png  cursor-generalisation.png  cursor-object.png  
 cursor-entity.png  cursor-relationship.png precondition.png cursor-precondition.png  cursor-send_signal.png  cursor-accept_signal.png  cursor-accept_time_event.png
 cursor-message-found.png message-lost.png cursor-message-lost.png end_of_life.png cursor-end_of_life.png exception.png 
