Change the expansion_region_widget in region_widget.
svn path=/branches/work/isi-umbrello/umbrello/; revision=635991

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -286,7 +286,7 @@ set(libumbrello_SRCS
    entity.cpp 
    entityattribute.cpp 
    entitywidget.cpp 
-   expansionregionwidget.cpp 
+   regionwidget.cpp 
    enum.cpp 
    enumliteral.cpp 
    enumwidget.cpp 
