Add align_{hori,vert}_distribute.png BUG:139913
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=636675

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -8,6 +8,8 @@ align_top.png \
 align_bottom.png \
 align_vert_middle.png \
 align_hori_middle.png \
+align_vert_distribute.png \
+align_hori_distribute.png \
 anchor.png \
 andline.png \
 arrow.png \
