Work on the Pin Widget : when we click in the superior part of an activity, a pin is created there, and when we click in the inferior part, a pin is created down...and we can create a pin just when clicking on an activity.
svn path=/branches/work/isi-umbrello/umbrello/; revision=638660

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -337,9 +337,9 @@ set(libumbrello_SRCS
    toolbarstateassociation.cpp 
    toolbarstatefactory.cpp 
    toolbarstatemessages.cpp 
+   toolbarstateonewidget.cpp 
    toolbarstateother.cpp 
    toolbarstatepool.cpp 
-   toolbarstatesequence.cpp 
    uml.cpp 
    umlattributelist.cpp 
    umlentityattributelist.cpp 
