SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=639988

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -6,6 +6,41 @@ Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;*.xmi.tgz;*.xmi.tar.bz2;
 Comment=Umbrello UML Modeller File
+Comment[ca]=Fitxer de model UML
+Comment[cs]=Soubor UML modeláře Umbrello
+Comment[cy]=Ffeil Modelydd UML Umbrello
+Comment[da]=Umbrello UML-fil
+Comment[de]=Umbrello-Datei
 Comment[el]=Αρχείο μοντελοποιητή UML Umbrello
+Comment[eo]=Dosiero de Umbrello UML-Modelilo
+Comment[es]=Archivo del modeladore UML Umbrello
+Comment[et]=Umbrello UML-fail
+Comment[eu]=Umbrello UML modelatzaile fitxategia
+Comment[fa]=پروندۀ مدل‌ساز Umbrello UML
+Comment[fi]=Umbrello UML -mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
+Comment[ga]=Comhad le haghaidh an Mhúnlóra UML Umbrello
+Comment[hu]=Umbrello UML-fájl
+Comment[is]=Umbrello UML Modeller Skrá
+Comment[it]=File del modellatore UML Umbrello
+Comment[ja]=Umbrello UML モデラーファイル
+Comment[kk]=Umbrello UML үлгілегішінің файлы
+Comment[ms]=Fail Pemodel Umbrello UML
+Comment[nb]=Umbrello UML-modelleringsfil
+Comment[nds]=UML-Modellmaker-Datei vun Umbrello
+Comment[nl]=Umbrello UML Modeller-bestand
+Comment[nn]=Umbrello UML-modelleringsfil
+Comment[pl]=Plik modelera UML Umbrello
+Comment[pt]=Ficheiro do Modelador de UML Umbrello
+Comment[pt_BR]=Arquivo de Modelador UML Umbrello
+Comment[ru]=Файл моделирования UML Umbrello
+Comment[sl]=Datoteka za modelirnik Umbrello UML
+Comment[sr]=Фајл Umbrello-а, UML моделара
+Comment[sr@Latn]=Fajl Umbrello-a, UML modelara
+Comment[sv]=Umbrello UML-modelleringsfil
+Comment[ta]=  அம்ரல்லோ UML மாடுலர் கோப்பு
+Comment[tg]=Файли моделкунонии UML Umbrello
+Comment[tr]=Umbrello UML Modelleyici Dosyası
+Comment[uk]=Файл моделювання UML Umbrello
 Comment[x-test]=xxUmbrello UML Modeller Filexx
+Comment[zh_TW]=Umbrello UML Modeller 檔案
