--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -7,10 +7,44 @@ Icon=umbrello
 DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
+Name[pa]=ਉਮਬਰਿੱਲਓ
+Name[ta]=  அம்ரல்லோ
 Name[x-test]=xxUmbrelloxx
 GenericName=UML Modeller
+GenericName[ca]=Modelador UML
+GenericName[cs]=UML modelář
+GenericName[cy]=Modelydd UML
+GenericName[da]=UML Modellering
+GenericName[de]=UML-Modellierer
 GenericName[el]=Μοντελοποιητής UML
+GenericName[es]=Modelador de UML
+GenericName[et]=UML-i modelleerimise rakendus
+GenericName[eu]=UML modelatzailea
+GenericName[fa]=مدل‌ساز UML
+GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
+GenericName[ga]=Múnlóir UML
+GenericName[hu]=UML-modellező
+GenericName[it]=Modellatore UML
+GenericName[ja]=UML モデラー
+GenericName[kk]=UML үлгілегіші
+GenericName[ms]=Pemodel UML
+GenericName[nb]=UML-modelleringsprogram
+GenericName[nds]=UML-Modellmaker
+GenericName[nl]=UML-modeller
+GenericName[nn]=UML-modelleringsprogram
+GenericName[pl]=Program do modelowania UML
+GenericName[pt]=Modelador de UML
+GenericName[pt_BR]=Modelador UML
+GenericName[ru]=Средство UML моделирования
+GenericName[sl]=Mofdelirnik UML
+GenericName[sr]=UML моделар
+GenericName[sr@Latn]=UML modelar
+GenericName[sv]=UML-modellering
+GenericName[ta]=UML மோடெல்லார்
+GenericName[tg]=Воситаи UML моделкунонӣ
+GenericName[tr]=UML Modelleyici
+GenericName[uk]=Засіб моделювання UML
 GenericName[x-test]=xxUML Modellerxx
 MimeType=application/x-uml
 Categories=Qt;KDE;Development;
