Apply attachment 19873 from Antoine Dopffer: > This patch creates a new dialog for collecting the "Import project" params > (directory and programming language) and searching the files that match the > params. > This patch works for me but: It uses features that exists only in QT4
I.e. this feature will be available in the KDE4 based Umbrello 2.0 release.

FEATURE:109157

svn path=/trunk/KDE/kdesdk/umbrello/; revision=640337

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -41,6 +41,7 @@
 
   <Menu name="code"><text>&amp;Code</text>
     <Action name="import_class"/>
+    <Action name="import_project"/>
     <Action name="generation_wizard"/>
     <Action name="generate_all"/>
     <Menu name="active_lang_menu"><text>Active &amp;Language</text>
