modification of undo redo 'fillcolor' and 'linecolor' to set the text of the action under the undo redo button
add the undo redo for the multiplicity on an association

svn path=/branches/work/isi-umbrello/umbrello/; revision=643394

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -239,7 +239,7 @@ set(libcmds_SRCS
 	cmds/widget/cmd_changeFontSelection.cpp
 	cmds/widget/cmd_changeLineColor.cpp
 	cmds/widget/cmd_changeFillColor.cpp
-	
+	cmds/widget/cmd_changeMulti.cpp
 
 )
 kde4_automoc(${libclipboard_SRCS})
