SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=645786

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -25,6 +25,7 @@ GenericName[fa]=مدل‌ساز UML
 GenericName[fi]=UML-mallintaja
 GenericName[fr]=Modeleur UML
 GenericName[ga]=Múnlóir UML
+GenericName[gl]=Modelador de UML
 GenericName[hi]=यूएमएल मॉडलर
 GenericName[hu]=UML-modellező
 GenericName[it]=Modellatore UML
