--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -22,6 +22,7 @@ Comment[fa]=پروندۀ مدل‌ساز Umbrello UML
 Comment[fi]=Umbrello UML -mallinnustiedosto
 Comment[fr]=Fichier du modeleur UML Umbrello
 Comment[ga]=Comhad le haghaidh an Mhúnlóra UML Umbrello
+Comment[gl]=Ficheiro UML de Umbrello
 Comment[hi]=अम्बरैलो यूएमएल मॉडलर फ़ाइल
 Comment[hu]=Umbrello UML-fájl
 Comment[is]=Umbrello UML Modeller Skrá
