--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -387,13 +387,12 @@ set (umbrello_SRCS
 )
 
 kde4_add_executable(umbrello ${umbrello_SRCS})
-target_link_libraries(umbrello ${KDE4_KIO_LIBS} ${KDE4_KDEPRINT_LIBS} ${KDE4_KDE3SUPPORT_LIBS} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES} ${LIBUUID} ${LIBS})
+target_link_libraries(umbrello ${KDE4_KIO_LIBS} ${KDE4_KDEPRINT_LIBS} ${KDE4_KFILE_LIBS} ${KDE4_KDE3SUPPORT_LIBS} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES} ${LIBUUID} ${LIBS})
 install(TARGETS umbrello DESTINATION ${BIN_INSTALL_DIR} )
 
 ########### install files ###############
 
 install( FILES umbrello.desktop  DESTINATION  ${XDG_APPS_DIR} )
-install( FILES x-umbrello.desktop  DESTINATION  ${MIME_INSTALL_DIR}/application )
 install( FILES
   tips
   umbrelloui.rc
