SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=655667

--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -29,6 +29,7 @@ Comment[is]=Umbrello UML Modeller Skrá
 Comment[it]=File del modellatore UML Umbrello
 Comment[ja]=Umbrello UML モデラーファイル
 Comment[kk]=Umbrello UML үлгілегішінің файлы
+Comment[lt]=Umbrello UML Modeller byla
 Comment[ms]=Fail Pemodel Umbrello UML
 Comment[nb]=Umbrello UML-modelleringsfil
 Comment[nds]=UML-Modellmaker-Datei vun Umbrello
