--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -39,7 +39,7 @@ GenericName[pt_BR]=Modelador UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sl]=Mofdelirnik UML
 GenericName[sr]=UML моделар
-GenericName[sr@Latn]=UML modelar
+GenericName[sr@latin]=UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
 GenericName[tg]=Воситаи UML моделкунонӣ
