Fix for EBN Krazy #20 which snuck into r676702 entails this here.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=676780

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -19,6 +19,7 @@ include_directories (${LIBXML2_INCLUDE_DIR} ${LIBXSLT_INCLUDE_DIR} ${CMAKE_CURRE
 
 set(libcodegenerator_SRCS
 	codegenerators/codegenfactory.cpp 
+	codegenerators/codegenpolicyext.cpp 
 	codegenerators/classifierinfo.cpp 
 	codegenerators/javacodegenerator.cpp 
 	codegenerators/javaantcodedocument.cpp 
