*SQL Code generation for MySQL and PostgreSQL. Generates code for everything that's supported in ER diagrams except Auto Increment ( which will be coming soon. I need to figure out a nice way to combine the auto increment of Mysql and Sequences of Pg )
svn path=/trunk/KDE/kdesdk/umbrello/; revision=678761

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -81,10 +81,12 @@ set(libcodegenerator_SRCS
 	codegenerators/javawriter.cpp 
 	codegenerators/jswriter.cpp
 	codegenerators/idlwriter.cpp 
+        codegenerators/mysqlwriter.cpp
 	codegenerators/pascalwriter.cpp 
 	codegenerators/perlwriter.cpp 
 	codegenerators/phpwriter.cpp 
 	codegenerators/php5writer.cpp 
+        codegenerators/postgresqlwriter.cpp
 	codegenerators/pythonwriter.cpp
 	codegenerators/rubywriter.cpp 
 	codegenerators/sqlwriter.cpp 
