SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=682204

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -34,6 +34,7 @@ GenericName[nds]=UML-Modellmaker
 GenericName[nl]=UML-modeller
 GenericName[nn]=UML-modelleringsprogram
 GenericName[pl]=Program do modelowania UML
+GenericName[pt]=Modelador de UML
 GenericName[pt_BR]=Modelador UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sl]=Mofdelirnik UML
