SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=683588

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -8,6 +8,7 @@ DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
 Name[hi]=अम्बरैलो
+Name[ne]=अम्ब्रेलो
 Name[pa]=ਉਮਬਰਿੱਲਓ
 Name[ta]=  அம்ரல்லோ
 GenericName=UML Modeller
@@ -34,6 +35,7 @@ GenericName[kk]=UML үлгілегіші
 GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
+GenericName[ne]=यूएमएल मोडेलर
 GenericName[nl]=UML-modeller
 GenericName[nn]=UML-modelleringsprogram
 GenericName[pl]=Program do modelowania UML
