--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -33,6 +33,7 @@ Comment[lt]=Umbrello UML Modeller byla
 Comment[ms]=Fail Pemodel Umbrello UML
 Comment[nb]=Umbrello UML-modelleringsfil
 Comment[nds]=UML-Modellmaker-Datei vun Umbrello
+Comment[ne]=अम्ब्रेलो यूएमएल मोडेलर फाइल
 Comment[nl]=Umbrello UML Modeller-bestand
 Comment[nn]=Umbrello UML-modelleringsfil
 Comment[pl]=Plik modelera UML Umbrello
