SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=686330

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -7,6 +7,7 @@ Icon=umbrello
 DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
+Name[ne]=अम्ब्रेलो
 Name[pa]=ਉਮਬਰਿੱਲਓ
 Name[ta]=  அம்ரல்லோ
 Name[x-test]=xxUmbrelloxx
@@ -31,6 +32,7 @@ GenericName[kk]=UML үлгілегіші
 GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
 GenericName[nds]=UML-Modellmaker
+GenericName[ne]=यूएमएल मोडेलर
 GenericName[nl]=UML-modeller
 GenericName[nn]=UML-modelleringsprogram
 GenericName[pl]=Program do modelowania UML
