---Start of Support for Extended Entity Relationship Modelling -- Added support for making "categories" and "category widgets". Widgets can only be drawn currently ( and moved around ). Lots more to come :)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=689167

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -248,6 +248,8 @@ set(libumbrello_SRCS
    assocrules.cpp 
    attribute.cpp 
    boxwidget.cpp 
+   category.cpp
+   categorywidget.cpp
    checkconstraint.cpp
    classifier.cpp 
    classifiercodedocument.cpp 
